--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
 #  main:
 #    web-application-type: none
   #  DATASOURCE MARIADB
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/mar-platform?createDatabaseIfNotExist=false&autoReconnect=true&UseUnicode=true&characterEncoding=utf8&useSSL=false
@@ -78,3 +82,15 @@ business-service:
 job:
   cron:
     get-all-product-value: 0 0 17 * * *
+
+auth:
+  default-pass: 1qazXSW@2020
+  secret-key: Z#Rh]@t/ZZm8/&ws
+  code:
+    prefix: 'auth:jwt:'
+    expire-time: 1800 #30m
+  token:
+    access-token-validity: 172800 #48h
+    refresh-token-validity: 7776000 #90d
+    access-token-length: 64
+    refresh-token-length: 128
